Style button and fix alignment

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -43,8 +43,6 @@ a {
 
 ul {
     padding: 0;
-    display: flex;
-
     li {
         padding: 0;
         list-style: none;
